# shuffly

./: Cargo.toml  LICENSE  README.md  pyproject.toml  shuffled.jsonl
data/: bar.jsonl  baz.jsonl  foo.jsonl
src/: lib.rs  main.rs  shuffle.rs
