[package]
name = "shuffly"
version = "0.1.0"
edition = "2021"

[lib]
name = "shuffly"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "shuffly"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.25.0", optional = true }  # Make optional
clap = { version = "4.0", features = ["derive"] }
rand = "0.9.1"
tokio = { version = "1.46.1", features = ["full"] }

[features]
default = []
python = ["pyo3"]
